--- a/SiriusMudanças/teste.html
+++ b/SiriusMudanças/teste.html
@@ -20,11 +20,21 @@
         align-items: center;
         overflow: hidden;
         line-height: 0;">
-            <a href="Inicio.html"><img src="./Sirius_icon.png" width="70px" height="70px"> </a>
-            <a href="./Inicio.html">Home</a> 
-            <a href="https://instagram.com/siriusmajorisclub?igshid=YmMyMTA2M2Y=">Instagram</a> 
+        <div class="nav_item">
+            <img src="./Sirius_icon.png" width="70px" height="70px">
+        </div>
+        <div class="nav_item">
+            <a href="./Inicio.html">Home</a>
+        </div>
+        <div class="nav_item">
+            <a href="./post.html">Posts</a>
+        </div>
+        <div class="nav_item">
             <a href="./sobre_nos.html">Sobre nós</a>
-            <a href="./post.html">Post</a>
+        </div>
+        <div class="nav_item">
+            <a href="https://instagram.com/siriusmajorisclub?igshid=YmMyMTA2M2Y=">Instagram</a> 
+        </div>
         </div>
     </div>
     <!-- Div ae -->
@@ -35,7 +45,7 @@
 
             <!-- Matérias -->
             <div class="amostra">
-                <img src="./fundo.png" class ="img1" alt="Imagem do James Webb" width="270px" height="156px">
+                <img src="./fundo.png" class ="img1" alt="Imagem do James Webb" width="250px" height="156px">
                 <div class="text">
                     <p>
                         Imagens do James Webb da Nebulosa Carina
@@ -44,7 +54,7 @@
             </div>
             
             <div class="amostra">
-                <img src="./fundo1.png" class ="img1" alt="Imagem do James Webb" width="270px" height="156px">
+                <img src="./fundo1.png" class ="img1" alt="Imagem do James Webb" width="250px" height="156px">
                 <div class="text">
                     <p>
                         Elon Musk usa os a tesla para fazer carros :)
@@ -53,7 +63,7 @@
             </div>
 
             <div class="amostra">
-                <img src="./raul.jpg" class ="img1" alt="Imagem do James Webb" width="270px" height="156px">
+                <img src="./raul.jpg" class ="img1" alt="Imagem do James Webb" width="250px" height="156px">
                 <div class="text">
                     <p>
                         Imagens do James Webb da Nebulosa Carina
@@ -62,7 +72,7 @@
             </div>
 
             <div class="amostra">
-                <img src="./fundo3.png" class ="img1" alt="Imagem do James Webb" width="270px" height="156px">
+                <img src="./fundo3.png" class ="img1" alt="Imagem do James Webb" width="250px" height="156px">
                 <div class="text">
                     <p>
                         Imagens do James Webb da Nebulosa Carina
