--- a/SiriusMudanças/Inicio.html
+++ b/SiriusMudanças/Inicio.html
@@ -4,46 +4,58 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.25">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link rel="stylesheet" href="./inicios.css">
     <title>Sirius Majoris</title>
 
-    <link rel="icon" href="./Sirius_icon.png" type="image/icon type">
+    <link rel="icon" href="./imgs/Sirius_icon.png" type="image/icon type">
 </head>
 
 <body>
     <!--Barra de navegação da pagina-->
     <div class="nav_bar">
-        <div> <img src="./Sirius_icon.png" width="30px" height="30px">  Sirius Majoris </div>
-        <div class="localization">
-            <a>Home</a> 
+        <div style="display: flex;
+        -webkit-box-align: center;
+        align-items: center;
+        overflow: hidden;
+        line-height: 0;">
+        <div class="nav_item">
+            <img src="./imgs/Sirius_icon.png" width="70px" height="70px">
+        </div>
+        <div class="nav_item">
+            <a href="./Inicio.html">Home</a>
+        </div>
+        <div class="nav_item">
+            <a href="./post.html">Posts</a>
+        </div>
+        <div class="nav_item">
+            <a href="./sobre_nos.html">Sobre nós</a>
+        </div>
+        <div class="nav_item">
             <a href="https://instagram.com/siriusmajorisclub?igshid=YmMyMTA2M2Y=">Instagram</a> 
-            <a href="./sobre_nos.html">Sobre nos</a>
-            <a href="./post.html">Post</a>
-            <a href="./teste.html">Testes do site</a>
+        </div>
         </div>
     </div>
     <!-- Conteúdo do site-->
-    <div>
-        <div id="pagina">
-            <h1 class="main-title">Sirius Majoris - Clube de Astronomia</h1>
-            <p> It's just a clube about astronomy</p>
-            <br>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et commodo est. Duis ac enim vel ante interdum iaculis. Nunc eget leo sit amet leo blandit interdum nec vel orci. Maecenas ullamcorper, felis vel viverra pulvinar, nisl diam elementum risus, ac lacinia nibh neque id libero. Mauris condimentum risus ut leo tincidunt ornare. Mauris efficitur est sit amet odio ultricies tincidunt. Maecenas fermentum aliquet justo, vitae lacinia nisl auctor ut. Phasellus ornare tincidunt euismod. Fusce imperdiet elit elit, in sodales ante ullamcorper nec. In cursus vestibulum sem convallis aliquet. Phasellus luctus velit id nulla vulputate placerat.
-                <br> <br>
-                Integer id lacus lorem. Etiam ligula odio, posuere non rutrum non, convallis sed leo. Integer id blandit enim. Aliquam non tellus ut tortor consequat molestie. Ut mauris turpis, interdum non elit eget, pretium dapibus ex. Aenean tristique consequat quam at viverra. Duis sed enim ipsum. Mauris vulputate dapibus sem eget placerat. Vestibulum feugiat efficitur felis, id pulvinar leo vulputate sit amet. Curabitur non felis tristique, viverra orci ac, bibendum felis. Nam blandit gravida velit sed egestas. Pellentesque orci risus, laoreet nec ipsum sit amet, bibendum tincidunt magna. Ut ornare semper ipsum, sit amet sodales leo faucibus eu. Nulla fermentum blandit neque a efficitur. Mauris tincidunt ultricies dolor id viverra.
-                <br> <br>
-                Phasellus vulputate urna vestibulum eros tincidunt, vel gravida massa aliquam. Donec et pretium mauris. Nam faucibus semper nisl. Mauris sed pretium ex. Phasellus eros elit, suscipit in varius accumsan, varius ac nunc. Vestibulum dapibus nisi vestibulum porta luctus. Cras eget est in eros dictum sollicitudin vitae nec odio. Quisque et venenatis sapien, nec commodo neque. Sed ultricies ex et metus hendrerit, a euismod purus interdum. Nullam eget mi iaculis, placerat elit et, blandit nisl. Aenean at fermentum metus.
-                <br> <br>
-                Duis iaculis mi at commodo cursus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed sed augue ante. Quisque eget pharetra sapien. Donec lacinia nunc sed lectus blandit dapibus. Vivamus accumsan magna arcu, consectetur tristique lacus maximus id. Donec tincidunt ipsum a venenatis tincidunt. Donec vitae ultrices purus, eu volutpat ante. Sed condimentum dui sit amet odio euismod, sit amet convallis orci vehicula. Proin a commodo nunc, sit amet mattis ipsum. Maecenas fringilla nunc nisl, molestie sollicitudin massa auctor vel. Phasellus dui est, finibus non magna quis, lobortis cursus neque. Cras fringilla risus at dolor sodales bibendum.
-                <br> <br>
-                Praesent sodales augue a dui tincidunt feugiat. Maecenas finibus venenatis est vestibulum pretium. Phasellus vitae interdum est. Ut egestas porttitor elit, vel varius augue luctus eget. Mauris quis massa eleifend lacus lacinia lobortis id ornare eros. Nam a blandit nibh. Vestibulum ornare nec erat vel aliquet. Aliquam nec purus egestas, convallis libero non, pellentesque purus. Praesent malesuada eu nulla a dapibus. Phasellus leo sapien, tincidunt eu fermentum non, iaculis at tortor. 
-                <br> <br>
-            </p>
+    <div class="main"> 
+        <div class="bg">
+            <h1>Sirius Majoris</h1>
         </div>
+
+        <div class="pagina">
+            <div class="container_ceu">
+                <div class="c1_text">
+                    <h2>QUEM SOMOS</h2>
+                    <p>Somos alunos do Ensino Médio amantes das estrelas! Queremos espalhar esse interesse para todos, compartilhando conhecimento e ascendendo a paixão celestial.</p>
+                    <button>Saiba mais</button>
+                </div>
+                <div class="c1_img">
+                    <img src="/imgs/teste1.jpg" alt="">
+                </div>
+            </div> 
+        </div>
+
     </div>
-    
 </body>
 </html>
