--- a/SiriusMudanças/sobre_nos.html
+++ b/SiriusMudanças/sobre_nos.html
@@ -20,29 +20,40 @@
         align-items: center;
         overflow: hidden;
         line-height: 0;">
-            <a href="Inicio.html"><img src="./Sirius_icon.png" width="70px" height="70px"> </a>
-            <a href="./Inicio.html">Home</a> 
-            <a href="https://instagram.com/siriusmajorisclub?igshid=YmMyMTA2M2Y=">Instagram</a> 
+        <div class="nav_item">
+            <img src="./imgs/Sirius_icon.png" width="70px" height="70px">
+        </div>
+        <div class="nav_item">
+            <a href="./Inicio.html">Home</a>
+        </div>
+        <div class="nav_item">
+            <a href="./post.html">Posts</a>
+        </div>
+        <div class="nav_item">
             <a href="./sobre_nos.html">Sobre nós</a>
-            <a href="./post.html">Post</a>
+        </div>
+        <div class="nav_item">
+            <a href="https://instagram.com/siriusmajorisclub?igshid=YmMyMTA2M2Y=">Instagram</a> 
+        </div>
         </div>
     </div>
 
     <div class="conteudo">
         <div class="sobre">
-                <h2>História</h2>
+            <p class>
+            <p>
+                Somos um clube de astronomia que visa a divulgação do conhecimento astronomico para qualquer idiota que queria aprender
+            </p>
+            <img src="./imgs/raul.jpg">
+        </div>
+        <div>
+                <p class="Hist">História<p>
             <br>
                 <p style="text-indent: 4em;">Em 2020 alguns alunos do Colégio Bandeirantes que tinham forte interesse em astronomia e queriam desenvolver um projeto que afetasse a comunidade na qual estavam inseridos.</p>
                 <p style="text-indent: 4em;">Foi em fevereiro de 2020 esses alunos criar um grupo entre eles no qual divulgavam notícias, aprendizados e informações entre eles. Em março de 2020 foi fundado o clube Sirius Majoris e assim os membros começaram a criar posts e pesquisas para postar no Instagram @siriusmajorisclub com o objetivo de divulgar o conhecimento para todas as pessoas de forma clara e objetiva, sem aprofundamento de detalhes. E assim ficou até o meio de 2022 onde por falta de tempo suspendemos as atividades do clube.</p>
             <br><br>
-                <h2>Membros</h2>
-            <br>
-            <ul>
-                <li>Pedro Henrique Mendes, Fundador do clube</li><br>
-                <li> Gabriel Batista Almeida, Fundador do clube</li><br>
-                <li> Davi Pereira Mesquita, Dev do site e monitor do clube</li><br>
-            </ul>
-            <br><br>
+        </div>
+        <div>
               
         </div>
 
