--- a/SiriusMudanças/teste.html
+++ b/SiriusMudanças/teste.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./testes.css">
     <title>Sirius Majoris</title>
 
-    <link rel="icon" href="./Sirius_icon.png" type="image/icon type">
+    <link rel="icon" href="./imgs/Sirius_icon.png" type="image/icon type">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
         overflow: hidden;
         line-height: 0;">
         <div class="nav_item">
-            <img src="./Sirius_icon.png" width="70px" height="70px">
+            <img src="./imgs/Sirius_icon.png" width="70px" height="70px">
         </div>
         <div class="nav_item">
             <a href="./Inicio.html">Home</a>
@@ -45,7 +45,7 @@
 
             <!-- Matérias -->
             <div class="amostra">
-                <img src="./fundo.png" class ="img1" alt="Imagem do James Webb" width="250px" height="156px">
+                <img src="./imgs/fundo.png" class ="img1" alt="Imagem do James Webb" width="250px" height="156px">
                 <div class="text">
                     <p>
                         Imagens do James Webb da Nebulosa Carina
@@ -54,7 +54,7 @@
             </div>
             
             <div class="amostra">
-                <img src="./fundo1.png" class ="img1" alt="Imagem do James Webb" width="250px" height="156px">
+                <img src="./imgs/fundo1.png" class ="img1" alt="Imagem do James Webb" width="250px" height="156px">
                 <div class="text">
                     <p>
                         Elon Musk usa os a tesla para fazer carros :)
@@ -63,7 +63,7 @@
             </div>
 
             <div class="amostra">
-                <img src="./raul.jpg" class ="img1" alt="Imagem do James Webb" width="250px" height="156px">
+                <img src="./imgs/raul.jpg" class ="img1" alt="Imagem do James Webb" width="250px" height="156px">
                 <div class="text">
                     <p>
                         Imagens do James Webb da Nebulosa Carina
@@ -72,7 +72,7 @@
             </div>
 
             <div class="amostra">
-                <img src="./fundo3.png" class ="img1" alt="Imagem do James Webb" width="250px" height="156px">
+                <img src="./imgs/fundo3.png" class ="img1" alt="Imagem do James Webb" width="250px" height="156px">
                 <div class="text">
                     <p>
                         Imagens do James Webb da Nebulosa Carina
