--- a/SiriusMudanças/teste2.html
+++ b/SiriusMudanças/teste2.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.25">
-    
-    <link rel="stylesheet" href="./testes2.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <title>Sirius Majoris</title>
-
     <link rel="icon" href="./imgs/Sirius_icon.png" type="image/icon type">
+    <link rel="stylesheet" href="./testes2.css">
 </head>
 
 <body>
