--- a/SiriusMudanças/Inicio.html
+++ b/SiriusMudanças/Inicio.html
@@ -45,6 +45,7 @@
         </div>
 
         <div class="pagina">
+
             <div class="container_ceu">
                 <div class="c1_text">
                     <h2>QUEM SOMOS</h2>
@@ -55,6 +56,31 @@
                     <img src="/imgs/teste1.jpg" alt="">
                 </div>
             </div> 
+
+            <div class="container_trab">
+                <h2>NOSSO TRABALHO</h2>
+                <div class="trabs">
+                    <div class="trab">
+                        <a href="" target=”_blank”>
+                            <img src="/imgs/insta1.png" alt="" style="object-fit: cover;" class="timg">
+                            <p class="img_center">Instagram</p>
+                        </a>
+                    </div>
+                    <div class="trab">
+                        <a href="">
+                            <img src="/imgs/club1.jpg" alt="" class="timg">
+                            <p class="img_center">Clube escolar</p>
+                        </a>
+                    </div>
+                    <div class="trab">
+                        <a href="">
+                            <img src="/imgs/post.png" alt="" style="object-fit: cover;" class="timg">
+                            <p class="img_center">Blog</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
     </div>
