--- a/SiriusMudanças/teste.html
+++ b/SiriusMudanças/teste.html
@@ -27,7 +27,7 @@
             <a href="./Inicio.html">Home</a>
         </div>
         <div class="nav_item">
-            <a href="./post.html">Posts</a>
+            <a href="./post.html">Blog</a>
         </div>
         <div class="nav_item">
             <a href="./sobre_nos.html">Sobre nós</a>
