Correção de bugs 1.0
Fixed - Barra de navegação
Mexi no sobre mim
Fiz mais coisas mas n lembro :/

--- a/SiriusMudanças/sobre_nos.html
+++ b/SiriusMudanças/sobre_nos.html
@@ -39,7 +39,7 @@
 
     <div class="conteudo">
             <div class="sobre">
-                <div class="text">
+                <div id="text">
                     <h2>
                         Sobre
                     </h2>
@@ -51,8 +51,10 @@
             <div class="transition"></div>
             <div id="alinhamento">
                 <div class="historia">
-                    <img src="./imgs/Sirius_icon.png" alt="Imagem dos membros do sirius">
-                    <div id="alinhamento2">
+                    <div>
+                        <img src="./imgs/Sirius_icon.png" alt="Imagem dos membros do sirius">
+                    </div>
+                    <div id="text">
                         <h2>História</h2>
                         <div>
                             <p style="text-indent: 4em;">Em 2020 alguns alunos do Colégio Bandeirantes que tinham forte interesse em astronomia e queriam desenvolver um projeto que afetasse a comunidade na qual estavam inseridos.</p>
