--- a/SiriusMudanças/Inicio.html
+++ b/SiriusMudanças/Inicio.html
@@ -20,21 +20,21 @@
         align-items: center;
         overflow: hidden;
         line-height: 0;">
-        <div class="nav_item">
-            <img src="./imgs/Sirius_icon.png" width="70px" height="70px">
-        </div>
-        <div class="nav_item">
-            <a href="./Inicio.html">Home</a>
-        </div>
-        <div class="nav_item">
-            <a href="./post.html">Posts</a>
-        </div>
-        <div class="nav_item">
-            <a href="./sobre_nos.html">Sobre nós</a>
-        </div>
-        <div class="nav_item">
-            <a href="https://instagram.com/siriusmajorisclub?igshid=YmMyMTA2M2Y=">Instagram</a> 
-        </div>
+            <div class="nav_item">
+                <img src="./imgs/Sirius_icon.png" width="70px" height="70px">
+            </div>
+            <div class="nav_item">
+                <a href="./Inicio.html">Home</a>
+            </div>
+            <div class="nav_item">
+                <a href="./post.html">Posts</a>
+            </div>
+            <div class="nav_item">
+                <a href="./sobre_nos.html">Sobre nós</a>
+            </div>
+            <div class="nav_item">
+                <a href="https://instagram.com/siriusmajorisclub?igshid=YmMyMTA2M2Y=">Instagram</a> 
+            </div>
         </div>
     </div>
 
@@ -53,7 +53,7 @@
                     <button>Saiba mais</button>
                 </div>
                 <div class="c1_img">
-                    <img src="/imgs/teste1.jpg" alt="">
+                    <img src="./imgs/teste1.jpg" alt="">
                 </div>
             </div> 
 
@@ -62,19 +62,19 @@
                 <div class="trabs">
                     <div class="trab">
                         <a href="" target=”_blank”>
-                            <img src="/imgs/insta1.png" alt="" style="object-fit: cover;" class="timg">
+                            <img src="./imgs/insta1.png" alt="" style="object-fit: cover;" class="timg">
                             <p class="img_center">Instagram</p>
                         </a>
                     </div>
                     <div class="trab">
                         <a href="">
-                            <img src="/imgs/club1.jpg" alt="" class="timg">
+                            <img src="./imgs/club1.jpg" alt="" class="timg">
                             <p class="img_center">Clube escolar</p>
                         </a>
                     </div>
                     <div class="trab">
                         <a href="">
-                            <img src="/imgs/post.png" alt="" style="object-fit: cover;" class="timg">
+                            <img src="./imgs/post.png" alt="" style="object-fit: cover;" class="timg">
                             <p class="img_center">Blog</p>
                         </a>
                     </div>
