Mudança das fotos
Mudei as fotos

--- a/SiriusMudanças/Inicio.html
+++ b/SiriusMudanças/Inicio.html
@@ -53,7 +53,7 @@
                     <button>Saiba mais</button>
                 </div>
                 <div class="c1_img">
-                    <img src="./imgs/teste1.jpg" alt="">
+                    <img src="./imgs/posts/5d.jpg" alt="">
                 </div>
             </div> 
 
