--- a/SiriusMudanças/sobre_nos.html
+++ b/SiriusMudanças/sobre_nos.html
@@ -44,7 +44,7 @@
                         Sobre
                     </h2>
                     <p>
-                        Somos um clube de astronomia que visa a divulgação do conhecimento astronomico para qualquer idiota que queria aprender
+                        Somos um clube de astronomia que visa a divulgação do conhecimento astronomico de fácil compreensão.
                     </p>
                 </div>
             </div>
