--- a/SiriusMudanças/Inicio.html
+++ b/SiriusMudanças/Inicio.html
@@ -19,21 +19,27 @@
         -webkit-box-align: center;
         align-items: center;
         overflow: hidden;
-        line-height: 0;">
-            <div class="nav_item">
-                <img src="./imgs/Sirius_icon.png" width="70px" height="70px">
+        line-height: 0; justify-content: space-between;">
+            <div class="nav_left">
+                <div class="nav_item">
+                    <img src="./imgs/Sirius_icon.png" width="70px" height="70px">
+                </div>
+                <div class="nav_item">
+                    <a href="./Inicio.html">Home</a>
+                </div>
+                <div class="nav_item">
+                    <a href="./post.html">Blog</a>
+                </div>
+                <div class="nav_item">
+                    <a href="./sobre_nos.html">Sobre nós</a>
+                </div>
             </div>
-            <div class="nav_item">
-                <a href="./Inicio.html">Home</a>
-            </div>
-            <div class="nav_item">
-                <a href="./post.html">Posts</a>
-            </div>
-            <div class="nav_item">
-                <a href="./sobre_nos.html">Sobre nós</a>
-            </div>
-            <div class="nav_item">
-                <a href="https://instagram.com/siriusmajorisclub?igshid=YmMyMTA2M2Y=">Instagram</a> 
+            <div class="nav_right">
+                <div class="nav_item" id="icon_insta">
+                    <a href="https://instagram.com/siriusmajorisclub?igshid=YmMyMTA2M2Y=" target="_blank">
+                        <img src="./imgs/insta_icon.png" width="50px" height="50px">
+                    </a> 
+                </div>
             </div>
         </div>
     </div>
@@ -61,7 +67,7 @@
                 <h2>NOSSO TRABALHO</h2>
                 <div class="trabs">
                     <div class="trab">
-                        <a href="" target=”_blank”>
+                        <a href="https://instagram.com/siriusmajorisclub?igshid=YmMyMTA2M2Y=" target=”_blank”>
                             <img src="./imgs/insta1.png" alt="" style="object-fit: cover;" class="timg">
                             <p class="img_center">Instagram</p>
                         </a>
@@ -73,7 +79,7 @@
                         </a>
                     </div>
                     <div class="trab">
-                        <a href="">
+                        <a href="/post.html">
                             <img src="./imgs/post.png" alt="" style="object-fit: cover;" class="timg">
                             <p class="img_center">Blog</p>
                         </a>
