--- a/SiriusMudanças/teste2.html
+++ b/SiriusMudanças/teste2.html
@@ -18,22 +18,28 @@
         -webkit-box-align: center;
         align-items: center;
         overflow: hidden;
-        line-height: 0;">
-        <div class="nav_item">
-            <img src="./imgs/Sirius_icon.png" width="70px" height="70px">
-        </div>
-        <div class="nav_item">
-            <a href="./Inicio.html">Home</a>
-        </div>
-        <div class="nav_item">
-            <a href="./post.html">Blog</a>
-        </div>
-        <div class="nav_item">
-            <a href="./sobre_nos.html">Sobre nós</a>
-        </div>
-        <div class="nav_item">
-            <a href="https://instagram.com/siriusmajorisclub?igshid=YmMyMTA2M2Y=">Instagram</a> 
-        </div>
+        line-height: 0; justify-content: space-between;">
+            <div class="nav_left">
+                <div class="nav_item">
+                    <img src="./imgs/Sirius_icon.png" width="70px" height="70px">
+                </div>
+                <div class="nav_item">
+                    <a href="./Inicio.html">Home</a>
+                </div>
+                <div class="nav_item">
+                    <a href="./post.html">Blog</a>
+                </div>
+                <div class="nav_item">
+                    <a href="./sobre_nos.html">Sobre nós</a>
+                </div>
+            </div>
+            <div class="nav_right">
+                <div class="nav_item" id="icon_insta">
+                    <a href="https://instagram.com/siriusmajorisclub?igshid=YmMyMTA2M2Y=" target="_blank">
+                        <img src="./imgs/insta_icon.png" width="50px" height="50px">
+                    </a> 
+                </div>
+            </div>
         </div>
     </div>
     <!-- Div ae -->
