Correção de Bugs 2.0
FIXED: "nossos trabalhos"

--- a/SiriusMudanças/Inicio.html
+++ b/SiriusMudanças/Inicio.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
     <title>Sirius Majoris</title>
     <link rel="icon" href="./imgs/Sirius_icon.png" type="image/icon type">
 
@@ -69,19 +70,25 @@
                     <div class="trab">
                         <a href="https://instagram.com/siriusmajorisclub?igshid=YmMyMTA2M2Y=" target=”_blank”>
                             <img src="./imgs/insta1.png" alt="" style="object-fit: cover;" class="timg">
-                            <p class="img_center">Instagram</p>
+                            <div class="img_overlay">
+                                <p class="img_center">Instagram</p>
+                            </div>
                         </a>
                     </div>
                     <div class="trab">
-                        <a href="">
-                            <img src="./imgs/club1.jpg" alt="" class="timg">
-                            <p class="img_center">Clube escolar</p>
+                        <a href="#">
+                            <img src="/imgs/club1.jpg" alt="" style="object-fit: cover;" class="timg">
+                            <div class="img_overlay">
+                                <p class="img_center">Clube</p>
+                            </div>
                         </a>
                     </div>
                     <div class="trab">
                         <a href="/post.html">
                             <img src="./imgs/post.png" alt="" style="object-fit: cover;" class="timg">
-                            <p class="img_center">Blog</p>
+                            <div class="img_overlay">
+                                <p class="img_center">Blog</p>
+                            </div>
                         </a>
                     </div>
                 </div>
