--- a/SiriusMudanças/Inicio.html
+++ b/SiriusMudanças/Inicio.html
@@ -67,9 +67,10 @@
             <div class="container_trab">
                 <h2>NOSSO TRABALHO</h2>
                 <div class="trabs">
+                    <!-- IMAGES -->
                     <div class="trab">
                         <a href="https://instagram.com/siriusmajorisclub?igshid=YmMyMTA2M2Y=" target=”_blank”>
-                            <img src="./imgs/insta1.png" alt="" style="object-fit: cover;" class="timg">
+                            <img src="./imgs/insta1.png" alt="" class="timg">
                             <div class="img_overlay">
                                 <p class="img_center">Instagram</p>
                             </div>
@@ -77,7 +78,7 @@
                     </div>
                     <div class="trab">
                         <a href="#">
-                            <img src="/imgs/club1.jpg" alt="" style="object-fit: cover;" class="timg">
+                            <img src="/imgs/club1.jpg" alt="" class="timg">
                             <div class="img_overlay">
                                 <p class="img_center">Clube</p>
                             </div>
@@ -85,13 +86,18 @@
                     </div>
                     <div class="trab">
                         <a href="/post.html">
-                            <img src="./imgs/post.png" alt="" style="object-fit: cover;" class="timg">
+                            <img src="./imgs/post.png" alt="" class="timg">
                             <div class="img_overlay">
                                 <p class="img_center">Blog</p>
                             </div>
                         </a>
                     </div>
+                    <!-- END IMAGES -->
                 </div>
+                
+
+                
+
             </div>
 
         </div>
